--- a/html/evga.html
+++ b/html/evga.html
@@ -1,5 +1,23 @@
 <h1>EVGA Useful Links</h1>
 
+<!--
+<p>
+  <a href=""></a>
+</p>
+-->
+
+<p>
+  <a href="https://www.evga.com/Products/productlist.aspx?type=8&family=GeForce+20+Series+Family">https://www.evga.com/Products/productlist.aspx?type=8&family=GeForce+20+Series+Family</a>
+</p>
+
+<p>
+  <a href="https://www.evga.com/products/productlist.aspx?type=8&family=GeForce+30+Series+Family">https://www.evga.com/products/productlist.aspx?type=8&family=GeForce+30+Series+Family</a>
+</p>
+
+<p>
+  <a href="https://www.evga.com/Products/ProductList.aspx?type=8">https://www.evga.com/Products/ProductList.aspx?type=8</a>
+</p>
+
 <p>
   <a href="https://www.evga.com/products/shoppingcart.aspx">https://www.evga.com/products/shoppingcart.aspx</a>
 </p>
