--- a/html/evga.html
+++ b/html/evga.html
@@ -5,6 +5,36 @@
   <a href=""></a>
 </p>
 -->
+<h2>Links Open in New Window</h2>
+
+<p>
+  <a href="https://www.evga.com/Products/productlist.aspx?type=8&family=GeForce+20+Series+Family" target="_blank">https://www.evga.com/Products/productlist.aspx?type=8&family=GeForce+20+Series+Family</a>
+</p>
+
+<p>
+  <a href="https://www.evga.com/products/productlist.aspx?type=8&family=GeForce+30+Series+Family" target="_blank">https://www.evga.com/products/productlist.aspx?type=8&family=GeForce+30+Series+Family</a>
+</p>
+
+<p>
+  <a href="https://www.evga.com/products/productlist.aspx?type=8" target="_blank">https://www.evga.com/products/productlist.aspx?type=8</a>
+</p>
+
+<p>
+  <a href="https://www.evga.com/products/shoppingcart.aspx" target="_blank">https://www.evga.com/products/shoppingcart.aspx</a>
+</p>
+
+<p>
+  <a href="https://secure.evga.com/cart/checkout_shipping.aspx" target="_blank">https://secure.evga.com/cart/checkout_shipping.aspx</a>
+</p>
+
+<p>
+  <a href="https://secure.evga.com/Cart/Checkout_PlaceOrder.aspx" target="_blank">https://secure.evga.com/Cart/Checkout_PlaceOrder.aspx</a>
+</p>
+
+
+
+
+<h2>Direct Links.  Middle click to open in new window</h2>
 
 <p>
   <a href="https://www.evga.com/Products/productlist.aspx?type=8&family=GeForce+20+Series+Family">https://www.evga.com/Products/productlist.aspx?type=8&family=GeForce+20+Series+Family</a>
