--- a/html/evga.html
+++ b/html/evga.html
@@ -1,3 +1,4 @@
+<title>EVGA Useful Links</title>
 <h1>EVGA Useful Links</h1>
 
 <!--
@@ -31,6 +32,10 @@
   <a href="https://secure.evga.com/Cart/Checkout_PlaceOrder.aspx" target="_blank">https://secure.evga.com/Cart/Checkout_PlaceOrder.aspx</a>
 </p>
 
+<p>
+  <a href="https://www.evga.com/community/myProducts.asp" target="_blank">https://www.evga.com/community/myProducts.asp</a>
+</p>
+
 
 
 
@@ -60,4 +65,7 @@
   <a href="https://secure.evga.com/Cart/Checkout_PlaceOrder.aspx">https://secure.evga.com/Cart/Checkout_PlaceOrder.aspx</a>
 </p>
 
+<p>
+  <a href="https://www.evga.com/community/myProducts.asp">https://www.evga.com/community/myProducts.asp</a>
+</p>
 
